ndb - bug#57568   This patch makes 7.0 behave same as 6.3 wrt. really big allocations.   The core idea of patch is to alloc all memory (still) at startup     map memory needed for startup (job buffers + transporter buffers)     and then let CMVMI via NDBFS map rest

(map = touch each page and optionally memlock)