storage/ndb/src/kernel/blocks/cmvmi/Cmvmi.hpp
@@ -76,6 +76,9 @@ private:
 
   void execDBINFO_SCANREQ(Signal *signal);
 
+  void execALLOC_MEM_REF(Signal*);
+  void execALLOC_MEM_CONF(Signal*);
+
   char theErrorMessage[256];
   void sendSTTORRY(Signal* signal);
 
